jump imgae corrected

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ body {
   opacity: 0;
   transform: scale(1);
   animation: scale 5s linear forwards;
-  transition: opacity 2s ease;
+  transition: opacity 5s ease;
 }
 
 .slideshow-slide.active img.move_left {
